# example-matlab

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
2018/: CMakeLists.txt  driver.cpp
cmake/: BuildInfo.cmake  FindJsonCpp.cmake  add_test_suite.cmake  matlab.cmake  version.cmake
docker/examples/simple/: Dockerfile
docker/pdal/: Dockerfile  README.md  build.sh  hack.sh  run.sh
docker/pdal-working/: Dockerfile  FindMatlab.cmake  README.md  build.sh  matlab.cmake  run.sh
docker/pdal/mods/: dont-use-link-path  mod  none  setit
ext/: CMakeLists.txt  SomeMccLib.cpp  SomeMccLib.h
gitlab/: .gitlab-ci.yml  Dockerfile
hack/: pdal-dependencies  pdal-install
mcc/: CMakeLists.txt  driver.cpp  run.sh
mcc/separate-mex/: CMakeLists.txt  separate.c
mcc/simple/: CMakeLists.txt  hello.m
mcc/with-mex/: CMakeLists.txt  with.c  wmex.m
pipelines/: pipeline.json
simple/: CMakeLists.txt  simple.cpp
src/: Array.h  BuildInfo.hpp.in  CMakeLists.txt  MyPlugin.cpp  MyPlugin.h  VecFilter.cpp  VecFilter.hpp
test/: CMakeLists.txt  McrListener.h  MockSomeMccLib.cpp  MyPluginTest.cpp  PipelineVectTest.cpp  UtilsTest.cpp  driver.cpp  test_suite_1.cpp
